<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Color Match</string>
    <string name="normal_mode">Cards</string>
    <string name="stroop_mode" translatable="false">Stroop</string>
    <string name="endless_mode">Impossible</string>
    <string name="sound_off_toggleButton" translatable="false">UNMUTE</string>
    <string name="sound_on_toggleButton" translatable="false">MUTE</string>

    <!--    public String blueString="Blue",
            redString="Red",
            greenString="Green",
            purpleString="Purple",
            yellowString="Yellow",
            orangeString="Orange";
    -->

    <string name="blueString">Blue</string>
    <string name="redString">Red</string>
    <string name="greenString">Green</string>
    <string name="purpleString">Purple</string>
    <string name="yellowString">Yellow</string>
    <string name="orangeString">Orange</string>


    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-8251950775376295/3653521563</string>
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-8251950775376295/5130254768</string>
    <string name="test_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>

    <!--
    Google Play game services IDs.
    Save this file as res/values/games-ids.xml in your project.
    -->
    <string name="app_id" translatable="false">929075294226</string>
    <string name="leaderboard_cards_mode" translatable="false">CgkIkuDPiYUbEAIQAA</string>
    <string name="leaderboard_stroop_mode" translatable="false">CgkIkuDPiYUbEAIQAQ</string>
    <string name="leaderboard_impossible_mode" translatable="false">CgkIkuDPiYUbEAIQAg</string>

</resources>
